packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_dev_mode_inlined.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2297
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { inlinedQrlDEV } from "@builder.io/qwik";
import { _jsxQ } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrlDEV(()=>{
    return /*#__PURE__*/ _jsxQ(Cmp, null, null, /*#__PURE__*/ _jsxQ("p", null, {
        class: "stuff",
        onClick$: /*#__PURE__*/ inlinedQrlDEV(()=>console.log('warn'), "App_component_Cmp_p_onClick_vuXzfUTkpto", {
            file: "/user/qwik/src/test.tsx",
            lo: 146,
            hi: 171,
            displayName: "App_component_Cmp_p_onClick"
        })
    }, "Hello Qwik", 3, null, {
        fileName: "test.tsx",
        lineNumber: 7,
        columnNumber: 4
    }), 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
}, "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 90,
    hi: 202,
    displayName: "App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,oBAAM,yCAAW,IAAM;IACnC,qBACC,MAAC,+BACA,MAAC;QAAE,OAAM;QAAQ,QAAQ,8BAAE,IAAM,QAAQ,GAAG,CAAC;;;;;;OAAS;;;;;;;;;AAGzD;;;;;IAAG\"}")
== DIAGNOSTICS ==

[]
