packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_drop_side_effects.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 820
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import { server$ } from '@builder.io/qwik-city';
import { clientSupabase } from 'supabase';
import { Client } from 'openai';
import { secret } from './secret';
import { sideEffect } from './secret';

const supabase = clientSupabase();
const dfd = new Client(secret);

(function() {
	console.log('run');
	})();
	(() => {
	console.log('run');
	})();

sideEffect();

export const api = server$(() => {
	supabase.from('ffg').do(dfd);
});

export default component$(() => {
	return (
		<button onClick$={() => await api()}></button>
	)
	});

============================= test.js ==

import { serverQrl } from "@builder.io/qwik-city";
import { _noopQrl } from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { sideEffect } from './secret';
(function() {
    console.log('run');
})();
(()=>{
    console.log('run');
})();
sideEffect();
export const api = serverQrl(/*#__PURE__*/ _noopQrl("api_server_JonPp043gH0"));
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test_component_luxexe0dqrg"), "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAMA,SAAS,UAAU,QAAQ,WAAW;AAKrC,CAAA,WAAW;IACX,QAAQ,GAAG,CAAC;AACZ,CAAA;AACC,CAAA,IAAM;IACP,QAAQ,GAAG,CAAC;AACZ,CAAA;AAED;AAEA,OAAO,MAAM,MAAM,4DAEhB;AAEH,6BAAe,0GAIX\"}")
============================= test_component_button_onclick_dgk9xlyroka.js (ENTRY POINT)==

import { api } from "./test";
export const test_component_button_onClick_DGk9xLyRokA = ()=>await api();


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yDA0BoB,IAAM,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_onClick_DGk9xLyRokA",
  "entry": null,
  "displayName": "test_component_button_onClick",
  "hash": "DGk9xLyRokA",
  "canonicalFilename": "test_component_button_onclick_dgk9xlyroka",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    548,
    565
  ]
}
*/
============================= test_component_luxexe0dqrg.js (ENTRY POINT)==

import { _jsxQ } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const test_component_LUXeXe0DQrg = ()=>{
    return /*#__PURE__*/ _jsxQ("button", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test_component_button_onclick_dgk9xlyroka"), "test_component_button_onClick_DGk9xLyRokA")
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAwB0B,IAAM;IAC/B,qBACC,MAAC;QAAO,QAAQ;;AAEjB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test_component_luxexe0dqrg",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    510,
    582
  ]
}
*/
== DIAGNOSTICS ==

[]
