packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_explicit_ext_transpile.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1280
expression: output
---
==INPUT==


import { component$, $, useStyles$ } from '@builder.io/qwik';

export const App = component$((props) => {
    useStyles$('hola');
    return $(() => (
        <div></div>
    ));
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0.js"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,2GAKhB\"}")
============================= app_component_usestyles_t35nsa5uv7u.js (ENTRY POINT)==

export const App_component_useStyles_t35nSa5UV7U = 'hola';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mDAIe\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_t35nSa5UV7U",
  "entry": null,
  "displayName": "App_component_useStyles",
  "hash": "t35nSa5UV7U",
  "canonicalFilename": "app_component_usestyles_t35nsa5uv7u",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    123,
    129
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    useStylesQrl(/*#__PURE__*/ qrl(()=>import("./app_component_usestyles_t35nsa5uv7u.js"), "App_component_useStyles_t35nSa5UV7U"));
    return /*#__PURE__*/ qrl(()=>import("./app_component_1_w0t0o3qmovu.js"), "App_component_1_w0t0o3QMovU");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,CAAC;IAC3B;IACA;AAGJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    182
  ]
}
*/
============================= app_component_1_w0t0o3qmovu.js (ENTRY POINT)==

import { _jsxQ } from "@builder.io/qwik";
export const App_component_1_w0t0o3QMovU = ()=>/*#__PURE__*/ _jsxQ("div", null, null, null, 3, "u6_0");
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";2CAKa,kBACL,MAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "app_component_1_w0t0o3qmovu",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    145,
    178
  ]
}
*/
== DIAGNOSTICS ==

[]
