packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_export_issue.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2275
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';

const App = component$(() => {
    return (
        <div>hola</div>
    );
});


export const Root = component$((props: Stuff) => {
    return (
        <App/>
    );
});

const Other = 12;
export { Other as App };

export default App;

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./root_component_royhjyacbye"), "Root_component_royhjYaCbYE"));
const Other = 12;
export { Other as App };
export default App;
export { App as _auto_App };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,MAAM,oBAAM;AAOZ,OAAO,MAAM,qBAAO,0GAIjB;AAEH,MAAM,QAAQ;AACd,SAAS,SAAS,GAAG,GAAG;AAExB,eAAe,IAAI\"}")
============================= root_component_royhjyacbye.js (ENTRY POINT)==

import { _auto_App as App } from "./test";
import { _jsxC } from "@builder.io/qwik";
export const Root_component_royhjYaCbYE = (props)=>{
    return /*#__PURE__*/ _jsxC(App, null, 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAU+B,CAAC;IAC5B,qBACI,MAAC;AAET\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "root_component_royhjyacbye",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    162,
    218
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { _jsxQ } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = ()=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, "hola", 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAGuB;IACnB,qBACI,MAAC,mBAAI;AAEb\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    126
  ]
}
*/
== DIAGNOSTICS ==

[]
