packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_functional_component_2.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 347
expression: output
---
==INPUT==


import { $, component$, useStore } from '@builder.io/qwik';
export const useCounter = () => {
	return useStore({count: 0});
}

export const STEP = 1;

export const App = component$((props) => {
	const state = useCounter();
	const thing = useStore({thing: 0});
	const STEP_2 = 2;

	const count2 = state.count * 2;
	return (
		<div onClick$={() => state.count+=count2 }>
			<span>{state.count}</span>
			{buttons.map(btn => (
				<button
					onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
				>
					{btn.name}
				</button>
			))}

		</div>

	);
})

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { useStore } from '@builder.io/qwik';
export const useCounter = ()=>{
    return useStore({
        count: 0
    });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAwB,QAAQ,QAAQ,mBAAmB;AAC3D,OAAO,MAAM,aAAa,IAAM;IAC/B,OAAO,SAAS;QAAC,OAAO;IAAC;AAC1B,EAAC;AAED,OAAO,MAAM,OAAO,EAAE;AAEtB,OAAO,MAAM,oBAAM,wGAoBjB\"}")
============================= app_component_div_onclick_1cgetmfzx0g.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const App_component_div_onClick_1CGetmFZx0g = ()=>{
    const [count2, state] = useLexicalScope();
    return state.count += count2;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";qDAeiB;;WAAM,MAAM,KAAK,IAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_onClick_1CGetmFZx0g",
  "entry": null,
  "displayName": "App_component_div_onClick",
  "hash": "1CGetmFZx0g",
  "canonicalFilename": "app_component_div_onclick_1cgetmfzx0g",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    342,
    367
  ]
}
*/
============================= app_component_div_button_onclick_f5nww9e63a4.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
import { STEP } from "./test";
export const App_component_div_button_onClick_f5NwW9e63a4 = ()=>{
    const [btn, props, state, thing] = useLexicalScope();
    return state.count += btn.offset + thing + STEP + 2 + props.step;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;4DAmBe;;WAAM,MAAM,KAAK,IAAI,IAAI,MAAM,GAAG,QAAQ,OARzC,IAQyD,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_onClick_f5NwW9e63a4",
  "entry": null,
  "displayName": "App_component_div_button_onClick",
  "hash": "f5NwW9e63a4",
  "canonicalFilename": "app_component_div_button_onclick_f5nww9e63a4",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    453,
    521
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { _jsxQ } from "@builder.io/qwik";
import { _wrapProp } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
import { useCounter } from "./test";
import { useStore } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    const state = useCounter();
    const thing = useStore({
        thing: 0
    });
    const count2 = state.count * 2;
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_div_onclick_1cgetmfzx0g"), "App_component_div_onClick_1CGetmFZx0g", [
            count2,
            state
        ])
    }, [
        /*#__PURE__*/ _jsxQ("span", null, null, _wrapProp(state, "count"), 3, null),
        buttons.map((btn)=>/*#__PURE__*/ _jsxQ("button", null, {
                onClick$: /*#__PURE__*/ qrl(()=>import("./app_component_div_button_onclick_f5nww9e63a4"), "App_component_div_button_onClick_f5NwW9e63a4", [
                    btn,
                    props,
                    state,
                    thing
                ])
            }, btn.name, 0, "u6_0"))
    ], 0, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;yCAQ8B,CAAC,QAAU;IACxC,MAAM,QAAQ;IACd,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAGhC,MAAM,SAAS,MAAM,KAAK,GAAG;IAC7B,qBACC,MAAC;QAAI,QAAQ;;;;;sBACZ,MAAC,8BAAM;QACN,QAAQ,GAAG,CAAC,CAAA,oBACZ,MAAC;gBACA,QAAQ;;;;;;eAEP,IAAI,IAAI;;AAOd\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    183,
    582
  ]
}
*/
== DIAGNOSTICS ==

[]
